# football-big-data

./: .gitignore  README.md  docker-compose.yaml  main.py  start-linux.sh  start.sh
data/: Dockerfile  Pipfile  main.py
hadoop/: Dockerfile
hadoop/config/: capacity-scheduler.xml  core-site.xml  hdfs-site.xml  marped-site.xml  resource-types.xml  yarn-site.xml
hadoop/scripts/: start-namenode.sh
kafka/config/: server.properties
scraper/: .env.example  Dockerfile  Pipfile  README.md  main.py  pyproject.toml
scraper/app/: __main__.py
scraper/app/api/: fetch.py
scraper/app/config/: config.py
scraper/app/kafka/: send.py
scripts/: download_data.linux.sh  download_data.sh  download_data.windows.sh
search/: Dockerfile  pyproject.toml
search/app/: __main__.py
search/app/search/: search_engine.py
search/src/: __main__.py
search/src/search/: search_engine.py
spark/: Dockerfile.builder  main.py
spark/config/: spark-defaults.conf
spark/src/batch/: games_played_players.py  goal_scoring_players.py  goal_scoring_teams.py  gpg_teams.py  matches.py  player_clubs.py  shots_on_target_percentage.py  yellow_red_cards_players.py  yellow_red_cards_teams.py
spark/src/config/: config.py
spark/src/data/: columns.py  load.py
spark/src/db/: RDBM.py  init.py  matches.py  output.py  players.py  tables.py  teams.py
spark/src/kafka/: consume.py
src/batch/: goal_scoring_teams.py  gpg_teams.py
web/: .env.example  .eslintrc.cjs  Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.ws-server.json
web/src/: env.js  ws-server.ts
(+40 files in other folders)
