[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Mahmoud <mahmoudhnefzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.3.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
